Debug: force black text color

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 </head>
 <body>
     <!-- Dev Version Marker -->
-    <div style="position:fixed;top:5px;left:5px;z-index:9999;font-size:10px;color:rgba(255,255,255,0.5);font-family:monospace;">debug02</div>
+    <div style="position:fixed;top:5px;left:5px;z-index:9999;font-size:10px;color:rgba(255,255,255,0.5);font-family:monospace;">debug03</div>
     <!-- Top Right Badges -->
     <div class="top-badges">
         <a href="https://www.gassaferegister.co.uk/find-an-engineer/" target="_blank" rel="noopener" class="gas-badge" aria-label="Gas Safe Registered - Check our credentials">
@@ -129,7 +129,7 @@
         <div class="panel-overlay"></div>
         <div class="panel-content">
             <div class="home-grid home-grid-no-image">
-                <div class="hero-text" style="background:red;min-height:200px;padding:20px;">
+                <div class="hero-text" style="background:red;min-height:200px;padding:20px;color:black !important;">
                     <p class="tagline" data-i18n="home.tagline">Colchester, Essex</p>
                     <h1><span class="brand">LOLEK</span><span class="dot">.</span>plumbing</h1>
                     <p class="subtitle" data-i18n="home.subtitle">Certified Heating Engineer & Plumber</p>
@@ -149,7 +149,7 @@
                         <div class="swiper features-swiper">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
-                                    <div class="feature-slide" style="background:yellow !important;min-height:100px;">
+                                    <div class="feature-slide" style="background:yellow !important;min-height:100px;color:black !important;">
                                         <div class="feature-icon">🌡️</div>
                                         <div class="feature-slide-text">
                                             <h3 data-i18n="features.smart.title">Smart Heating</h3>
