Test: add Swiper back

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <link rel="stylesheet" href="fonts/fonts.css">
     
     <!-- Swiper CSS (self-hosted) -->
-    <!-- DISABLED: link rel="stylesheet" href="vendor/swiper.min.css" -->
+    <link rel="stylesheet" href="vendor/swiper.min.css">
     
     <!-- Styles -->
     <link rel="stylesheet" href="css/style.css">
@@ -89,7 +89,7 @@
 </head>
 <body>
     <!-- Dev Version Marker -->
-    <div style="position:fixed;top:5px;left:5px;z-index:9999;font-size:10px;color:rgba(255,255,255,0.5);font-family:monospace;">mainjs</div>
+    <div style="position:fixed;top:5px;left:5px;z-index:9999;font-size:10px;color:rgba(255,255,255,0.5);font-family:monospace;">swiper</div>
     <!-- Top Right Badges -->
     <div class="top-badges">
         <a href="https://www.gassaferegister.co.uk/find-an-engineer/" target="_blank" rel="noopener" class="gas-badge" aria-label="Gas Safe Registered - Check our credentials">
@@ -442,7 +442,7 @@
     <!-- DISABLED: gsap -->
     <!-- DISABLED: ScrollTrigger -->
     <!-- DISABLED: ScrollToPlugin -->
-    <!-- DISABLED: swiper -->
+    <script src="vendor/swiper.min.js" defer></script>
     <script src="js/translations.js" defer></script>
     <script src="js/main.js" defer></script>
 </body>
