--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 </head>
 <body>
     <!-- Dev Version Marker -->
-    <div style="position:fixed;top:5px;left:5px;z-index:9999;font-size:10px;color:rgba(255,255,255,0.5);font-family:monospace;">nocssm</div>
+    <div style="position:fixed;top:5px;left:5px;z-index:9999;font-size:10px;color:rgba(255,255,255,0.5);font-family:monospace;">v1.0</div>
     <!-- Top Right Badges -->
     <div class="top-badges">
         <a href="https://www.gassaferegister.co.uk/find-an-engineer/" target="_blank" rel="noopener" class="gas-badge" aria-label="Gas Safe Registered - Check our credentials">
@@ -439,9 +439,9 @@
     </div>
 
     <!-- Scripts (self-hosted) - defer for performance -->
-    <!-- DISABLED: gsap -->
-    <!-- DISABLED: ScrollTrigger -->
-    <!-- DISABLED: ScrollToPlugin -->
+    <script src="vendor/gsap.min.js" defer></script>
+    <script src="vendor/ScrollTrigger.min.js" defer></script>
+    <script src="vendor/ScrollToPlugin.min.js" defer></script>
     <script src="vendor/swiper.min.js" defer></script>
     <script src="js/translations.js" defer></script>
     <script src="js/main.js" defer></script>
