--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 </head>
 <body>
     <!-- Dev Version Marker -->
-    <div style="position:fixed;top:5px;left:5px;z-index:9999;font-size:10px;color:rgba(255,255,255,0.5);font-family:monospace;">v2.5</div>
+    <div style="position:fixed;top:5px;left:5px;z-index:9999;font-size:10px;color:rgba(255,255,255,0.5);font-family:monospace;">v2.6</div>
     <!-- Top Right Badges -->
     <div class="top-badges">
         <a href="https://www.gassaferegister.co.uk/find-an-engineer/" target="_blank" rel="noopener" class="gas-badge" aria-label="Gas Safe Registered - Check our credentials">
@@ -328,7 +328,7 @@
                     </div>
                     <div class="swiper-slide">
                         <article class="project-card">
-                            <img src="images/lb_4.jpg" alt="Gas Safe boiler installation" loading="lazy" width="400" height="300">
+                            <img src="images/boiler-install.jpg" alt="Gas Safe boiler installation" loading="lazy" width="400" height="300">
                             <div class="project-info">
                                 <h4 data-i18n="work.projects.boiler.title">Boiler Installs</h4>
                                 <p data-i18n="work.projects.boiler.desc">Gas Safe certified</p>
