--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 </head>
 <body>
     <!-- Dev Version Marker -->
-    <div style="position:fixed;top:5px;left:5px;z-index:9999;font-size:10px;color:rgba(255,255,255,0.5);font-family:monospace;">v3.5</div>
+    <div style="position:fixed;top:5px;left:5px;z-index:9999;font-size:10px;color:rgba(255,255,255,0.5);font-family:monospace;">v3.6</div>
     <!-- Top Right Badges -->
     <div class="top-badges">
         <a href="https://www.gassaferegister.co.uk/find-an-engineer/" target="_blank" rel="noopener" class="gas-badge" aria-label="Gas Safe Registered - Check our credentials">
@@ -228,7 +228,7 @@
                     <h3 data-i18n="about.subtitle">Experience & Reliability</h3>
                     <p data-i18n="about.desc1">Rated 5 stars — we offer a fully comprehensive service including new boilers and heating systems, annual boiler inspections & servicing, landlords certificates, bathroom refurbishments.</p>
                     <p data-i18n="about.desc2">Your <em>local</em> friendly and dependable plumber based in Colchester, Essex.</p>
-                    <ul class="feature-list">
+                    <ul class="feature-list" style="display:flex;flex-direction:column;align-items:center;max-width:fit-content;margin:15px auto;">
                         <li data-i18n="about.features.gassafe">Gas Safe Registered</li>
                         <li data-i18n="about.features.insured">Fully Insured</li>
                         <li data-i18n="about.features.nocallout">No Call-Out Fee</li>
