--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
     </script>
 </head>
 <body>
-    <!-- Dev Version Marker -->
-    <div style="position:fixed;top:5px;left:5px;z-index:9999;font-size:10px;color:rgba(255,255,255,0.5);font-family:monospace;">v4.7</div>
+    <!-- Production ready -->
     <!-- Top Right Badges -->
     <div class="top-badges">
         <a href="https://www.gassaferegister.co.uk/find-an-engineer/" target="_blank" rel="noopener" class="gas-badge" aria-label="Gas Safe Registered - Check our credentials">
